dropdown alignment fixed. Use the class 'button-right' in div container (e.g. form-group or button-group) to set the dropdown alignment to right.

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
@@ -101,6 +101,12 @@ body {
     background-image: url("/resources/image/bg.png");
 }
 
+/** FIX for right dropdown alignment */
+
+.dropdown-align-right .dropdown-menu {
+	right: 0;
+	left: auto;
+} 
 
 ul.dropdown-menu.list-options {
 	font-size: 12px !important;
